TODO: evidenceが長いので要改善

--- a/src/00_toy_rag.ipynb
+++ b/src/00_toy_rag.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
     "import openai\n",
+    "import pandas as pd\n",
     "import pylibmagic\n",
     "from langchain.embeddings.openai import OpenAIEmbeddings\n",
     "from langchain_openai import OpenAI\n",
@@ -165,6 +166,97 @@
     "\n",
     "# 結果を表示\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'死生に関するいくつかの断想 BITS OF LIFE AND DEATH 小泉八雲\\u3000Lafcadio Hearn 林田清明訳\\n\\n------------------------------------------------------\\n\\n【テキスト中に現れる記号について】\\n\\n《》：ルビ\\n\\n（例）御幣《ごへい》\\n\\n｜：ルビの付く文字列の始まりを特定する記号\\n\\n（例）杉本｜嘉作《かさく》\\n\\n［＃］：入力者注\\u3000主に外字の説明や、傍点の位置の指定\\n\\n（例）［＃１９字下げ］\\n\\n-------------------------------------------------------\\n\\n［＃１９字下げ］１［＃「１」は中見出し］\\n\\n七月二五日。\\u3000今週は思いがけない訪問が三つ、わが家にあった。\\n\\n最初のものは、井戸掃除職人たちだった。毎年すべての井戸は空にされ、掃除され、井戸の神様である水神様が荒れ狂わないようにしなければならない。この時に、私は、日本の井戸と、ミズハノメノミコト（水波能売命）とも呼ばれる二つの名を持つ井戸の守り神にまつわるいくつかの事柄を知ったのだった。\\n\\n水神様は、屋敷の持ち主が浄めについてのきまりをしっかり守っていれば、井戸の水を甘露にして、かつ冷たく保って、あらゆる井戸を守ってくれる。これらの掟を破った者には病や死が訪れるという。稀には、この神は蛇の姿となって現れることがある。私はこの神を祀る神社を一度も見たことがない。しかし、毎月一度は、近所の神主が井戸のある敬虔な家庭を訪れて、井戸の神様に古式の祈りを捧げ、幟や紙の御幣《ごへい》を井戸の端に立てるのである。井戸が清掃された後にも、また、これがなされる。新しい水の最初の一汲みは男たちがしなければならない。というのは、女が最初に汲めば、その井戸はそれ以後ずっと濁ったままであるからだという。\\n\\n水神様の仕事を手助けする使者《おつかい》はほとんどいない。ただ、フナ（１）［＃「（１）」は行右小書き］という小さな魚がいる。一匹か二匹のフナがどの井戸にもいて、幼虫から水を綺麗にする。井戸浚いのとき、この魚は大事にされる。私の井戸にも一組のフナがいることを知ったのも、井戸浚い職人たちが来たこのときであった。井戸水が溜められている間には、フナは冷たい水を張った桶に入れられていた。その後、再びそれらの寂しい場所へ投げ込まれたのである。\\n\\n私のところの井戸の水は透明で氷のように冷たい。しかし、私は水を飲むたびに、暗い井戸の中をつねに動き回っており、また桶がピチャピチャと音を立てて降りてくるために、何年にも渡って嚇されてきた二匹の小さな白い生き物のことを思わずにはいられない。\\n\\n第二の興味深い来訪は、手動の竜吐水ポンプを携えて、装束に身を包んだ地元の火消たちであった。昔からの慣例に従って、乾燥した時期に担当の全地域を廻っている。そして、熱くなった屋根に水を掛けて、裕福な家々から、何がしかのわずかな心付けを受け取るのである。長いこと雨が降らなければ、屋根は太陽の熱で火が付くだろうと考えられていた。火消たちはホースを操って、屋根や樹木それに庭に水を掛け、かなり涼しい雰囲気を作り出したのであった。その返礼に、私は酒を買えるだけの祝儀を彼らにあげた。\\n\\n三番目の訪問は、子どもたちの代表者のものであった。私の家のちょうど真正面つまり道路を挟んだ反対側には、お地蔵さんのお堂がある。それは、地蔵盆のお祭りをふさわしく祝うために、幾らかの寄進を請うためにやってきたものであった。私は喜んで寄付をした。というのも、この優しい仏様が好きだったし、地蔵祭りが楽しいものであることを知っていたからだ。つぎの朝早く、お堂はすでに生け花と奉納された提灯で飾り付けられていた。お地蔵さんの首には新しいよだれ掛けが掛けられており、その前には仏式のお供え物が整えられていた。この後、大工たちがお寺の境内に踊り舞台を作っていた。日没前には、玩具売たちが境内に屋台を立て、小さな夜店ができていた。暗くなってから、子どもたちの踊りを見ようと、私はたくさんの提灯の明かりの中へ出かけた。家の門の前に、一メートルはあろうかと思われる巨大なトンボが止まり木に止まらせてあったのに気がついた。それは、私が寄付したものに対する子どもたちの感謝の印で――お飾りのひとつ――であった。その瞬間、おや、そうなのだと私は驚いたのだ。よく見てみると、トンボの胴体は色紙でくるまれた杉の枝であり、四つの羽は四つの十能であったし、綺羅めいているトンボの頭は小さな茶器であった。全体は、それも意匠の一部をなしていると思われるが、異様な影を作り出すように置かれた蝋燭で照らされていた。工芸用の材料を少しも使わずに作られているが、美術的感覚のある、すばらしい工作であった。それにもまして、それがわずか八歳に過ぎないかわいらしい小さな子どもの作品だったのである！\\n\\n［＃ここから３字下げ］\\n\\n［＃ここから１段階小さな文字］\\n\\n注\\n\\n（１）フナは、小さな銀色をした鯉の一種。\\n\\n［＃ここで小さな文字終わり］\\n\\n［＃ここで字下げ終わり］\\n\\n［＃１９字下げ］２［＃「２」は中見出し］\\n\\n七月三〇日。\\u3000南側の隣の家は――低くくて、黒ずんだ構えをした家であるが――染物屋である。ご存知のように、日本の染物屋は天日で乾かすために、家の前で竹の柱と柱との間に、濃紺、紫、バラ色、薄青、パールグレイなど、さまざまな色の絹や綿の長い布を広げている。昨日、この隣人が私に自分の家に来ないかと誘ってくれた。その小さな住まいの正面を通って案内されたが、奥の縁側から、京都の古いお屋敷にも匹敵するような庭を見て驚いた。築山山水《つきやまさんすい》の優雅な庭園が広がり、清水の池には、すばらしい尾びれのある金魚が泳いでいる。\\n\\nしばらくこの景観を堪能していたが、染物屋はお寺のようにしつらえた小さな部屋に案内した。あらゆる調度品は小さく造作されており、どのお寺でもこのような工芸的な造りとなっているものを見たことがなかった。彼は一五〇〇円ばかり掛かりましたよと言ったが、私には果たしてこの額で足りたものかどうか分からなかった。そこには、丹念に彫られた三つの仏壇があった――金泊でできた三重の黄金の輝きである。また、可愛らしい仏像が数体と多数の精巧な仏器が置かれており、黒檀の経机、木魚（１）［＃「（１）」は行右小書き］、二つの立派な鈴《りん》があった――つまり、お寺さんの仏具一式を小さくしたものがみんなここに揃っているというわけである。ここの主人は、若い頃、仏門に入り、お寺で修行していたので、浄土宗で用いられるすべてのお経を持っていた。そして、普通のお勤めならできると言っていた。毎日、決まった時間になると、家族全員が仏間に集まって、家族のみんなのために、たいていは彼がお経を読んでいる。ただ、特別な場合には近くのお寺のお坊さんが来て、お勤めをするのだという。\\n\\n彼はまた泥棒についての不思議な話をした。染物屋はとくに泥棒に入られやすいのだという。理由の一端は、彼らが預かっている絹織物の価値の故であるし、また、仕事柄、儲かるものであると知られているからである。ある夕、泥棒が入った。主人は町におらず。彼の老母、妻それに女中が、その時家の中にいた。三人の賊は戸口から侵入したが、覆面をして長い刀を帯びていた。そのうちの一人が、建物の中に見習い職人たちがいないかと女中に尋ねた。女中は、闖入者たちが驚いて逃げるのではないかと思って、若い男らがまだ働いておりますと答えた。しかし、泥棒はこの言い種《ぐさ》には乗らなかった。うち一人が玄関を見張り、他の二人は寝室に入り込んだ。女たちは恐怖し、女将《おかみ》が「わたしらば殺したかとですか？」と聞いた。頭領と思しき男が答えた。「殺したかなか！\\u3000金が欲しかだけたい。それが手に入らんと、こうなるまでたい」――と、刀をブスリと畳に突き立てた。老母が言った。「そぎゃんに家《うち》の嫁ば驚かせんでよかでっしょ。こん家の有り金全部ば差し上げますたい。ばってん、倅《せがれ》は京都に行っとるですけん、ここにはそんなにはなかとです。そればご承知おきくだはりまっせ。」彼女は金庫と自分の財布とを差し出した。頭領がこれを数えたが、二七円八四銭しかなかった。が、おだやかに言った。「驚かすつもりはなか。お前たちがとても信心深か信徒だというこつは知っとる。だけん、お前たちゃあ、嘘ばついちゃおらんだろうね。で、これで全部かね？」「はい、そぎゃんです」と老母が答える。「おっしゃるごと、私らは仏様ば信じております。あんたたちが今私から盗ろうとなさっとは、あたし自身がかつて前世でお前さん方から盗ったことがあるけんでしょう。これはそん時の罪に対する罰ですたいね。そんならば、あんた方を騙す代わりに、私が前世でお前さん方にした罪をこの際喜んで償うことにしまっしょ。」泥棒は笑いながら言った。「婆さん、あんたはよか人たいね。あんたば信じるよ。おれたちゃあ、貧しい者《もん》からは盗らん。そこでたい、何さおかの着物とこれだけはもらうよ。」と、上質の絹の羽織に手を置いた。老母が答える。「倅の服なら全部さし上げますばってんが、それだけは盗らんで下さりまっせ。それは倅の物じゃなかとです。染めに預かった他所《よそ》様の品ですけん、他人《ひと》様の着物ば差し上げるわけにはいかんとです。」泥棒も納得したと見えて「そりぁそうたいな。そんなら、これは持っていかんたい。」と言った。\\n\\n二・三の着物を受け取ると、泥棒はおだやかに暇乞いをし、女たちに後を付けるなと命じた。女中はなお入口近くにいたが、泥棒の頭領が傍を通るときに言った。\\n\\n「お前はよくも俺たちに嘘ばついたな。――それだけん、こればやろう！」と、女中に一撃を加えて気絶させた。泥棒の誰もまだ捕まっていない。\\n\\n［＃ここから３字下げ］\\n\\n［＃ここから１段階小さな文字］\\n\\n注\\n\\n（１）イルカの頭のような格好をした木の塊で、中が空洞になっている。仏教の読経に合わせて敲かれる。\\n\\n［＃ここで小さな文字終わり］\\n\\n［＃ここで字下げ終わり］\\n\\n［＃１９字下げ］３［＃「３」は中見出し］\\n\\n八月二九日。\\u3000ある仏教宗派の葬儀の儀式に従って、遺体が火葬されるとき、骨の中から、ほとけさん、もしくは「仏さま」と呼ばれる小さな骨が探される。これは、一般には喉の小さな骨であると考えられている。どの骨がそれなのか、私は分からないし、また、そのような遺骨を調べるという機会を持ったこともない。\\n\\n焼かれた後に発見される、この小さな骨の形によって、死者の将来の状態が預言されうるのである。魂が運命づけられている次の状態が幸福なものなら、この骨は仏陀の小さなイメージの形をしているという。次の人生が不幸ならば、その骨は奇妙な形をしているか、あるいはまったく形をなしていないだろう、という。\\n\\n近所のたばこ屋のせがれの、幼い少年が一昨日の晩に死んだ。今日、火葬に付された。火から残された小さな骨には、三体の仏様の形があった――三体――それはおそらく、悲しみにくれている両親への、精神的な慰めとなるものであったろう（１）［＃「（１）」は行右小書き］。\\n\\n［＃ここから３字下げ］\\n\\n［＃ここから１段階小さな文字］\\n\\n注\\n\\n（１）大阪の天王寺という大きなお寺では、この骨はみんな納骨所に投げ込まれる。骨が「落ちるときに出す音」によって後世についての証が得られるという。このようにして集められた骨は、一〇〇年毎に、粉にされて、大きな仏像が造られる。\\n\\n［＃ここで小さな文字終わり］\\n\\n［＃ここで字下げ終わり］\\n\\n［＃１９字下げ］４［＃「４」は中見出し］'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result[\"source_documents\"][0].page_content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 提供されたCSVファイルを読み込み\n",
+    "query_df = pd.read_csv(\"../data/query.csv\", encoding=\"utf-8\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 各問題に対して回答と証拠を取得する関数\n",
+    "def get_answer_and_evidence(problem):\n",
+    "    result = qa_chain.invoke(problem)\n",
+    "    answer = result[\"result\"]  # 回答部分\n",
+    "    evidence = result[\"source_documents\"][0].page_content # 証拠部分を抽出\n",
+    "    return answer, evidence\n",
+    "\n",
+    "# 各行の問題に対して処理を実行し、回答と証拠を取得\n",
+    "answers = []\n",
+    "evidences = []\n",
+    "\n",
+    "for _, row in query_df.iterrows():\n",
+    "    problem = row['problem']\n",
+    "    answer, evidence = get_answer_and_evidence(problem)\n",
+    "    answers.append(answer)\n",
+    "    evidences.append(evidence)\n",
+    "\n",
+    "# DataFrameに回答と証拠を追加\n",
+    "query_df['answer'] = answers\n",
+    "query_df['evidence'] = evidences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_df[\"index\"] = query_df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 結果をCSVファイルとして保存\n",
+    "query_df.to_csv(\"../result/output_with_answers_and_evidence_20240912.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 必要な列（id, answer, evidence）をヘッダなしでCSVに書き出し\n",
+    "query_df[['index', 'answer', 'evidence']].to_csv(\n",
+    "    \"../data/evaluation/submit_20240912/predictions.csv\",\n",
+    "    index=False,\n",
+    "    header=False\n",
+    ")"
    ]
   }
  ],
