後処理を入れてdocker上で評価できるようにした。TODO: プロンプト工夫

--- a/src/00_toy_rag.ipynb
+++ b/src/00_toy_rag.ipynb
@@ -2,22 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import codecs\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
     "import openai\n",
     "import pandas as pd\n",
     "import pylibmagic\n",
+    "import tiktoken\n",
     "from langchain.embeddings.openai import OpenAIEmbeddings\n",
     "from langchain_openai import OpenAI\n",
     "from langchain.chat_models import ChatOpenAI\n",
     "from langchain.vectorstores import Chroma\n",
     "from langchain.document_loaders import TextLoader, DirectoryLoader\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from langchain.chains import RetrievalQA"
+    "from langchain.chains import RetrievalQA\n",
+    "from langchain_core.prompts.prompt import PromptTemplate"
    ]
   },
   {
@@ -190,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,20 +222,122 @@
     "    problem = row['problem']\n",
     "    answer, evidence = get_answer_and_evidence(problem)\n",
     "    answers.append(answer)\n",
-    "    evidences.append(evidence)\n",
-    "\n",
-    "# DataFrameに回答と証拠を追加\n",
-    "query_df['answer'] = answers\n",
-    "query_df['evidence'] = evidences"
+    "    evidences.append(evidence)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_df[\"index\"] = query_df.index"
+    "# DataFrameに回答と証拠を追加\n",
+    "query_df['answer'] = answers\n",
+    "query_df['full_evidence'] = evidences"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>problem</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>full_evidence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>競漕会の三日前のレースコースでの結果は、農科と文科でどれくらいの秒数差があったか？</td>\n",
+       "      <td>文科が漕いだ時間は五分十五秒で、農科は五分二十秒以上かかったため、文科が農科に対して約五秒の...</td>\n",
+       "      <td>二三日してから法科がまた口惜しがって挑戦《ちょうせん》をして来た。その時は四分の力漕をやって...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>骸骨男の正体は誰ですか？作中で言及されている氏名で答えること。</td>\n",
+       "      <td>骸骨男の正体は笠原太郎です。</td>\n",
+       "      <td>そいつが、立ちあがって、こちらをむきました。その顔！　やっぱりそうでした。骸骨です。骸骨の顔...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>骸骨男はバスの中に足跡を一切残さずにどうやって抜け出しましたか？</td>\n",
+       "      <td>骸骨男はバスの床に隠し戸がついており、その隠し戸を使って逃げたため、足跡を一切残さずに抜け出...</td>\n",
+       "      <td>いつか、大型バスの中から骸骨男が消えたのも、バスの床に、かくし戸がついていたというのはごまか...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>殺人罪で裁判にかけられた兄が登場しますが、その理由は何ですか？</td>\n",
+       "      <td>兄が殺人罪で裁判にかけられた理由は、恋人を殺した後に自らも自殺しようとしたためです。兄は、魚...</td>\n",
+       "      <td>嘉作の一四歳の息子が、父を捜すために走ってきた。彼は唄と叫び声を聞いた。けれども、怖いと感じ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>小説「芽生」で出てくる国名は何種類ですか？</td>\n",
+       "      <td>「芽生」に出てくる国名については、情報が提供されていないため、わかりません。</td>\n",
+       "      <td>芽生\\n\\n島崎藤村\\n\\n--------------------------------...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                                    problem  \\\n",
+       "0      1  競漕会の三日前のレースコースでの結果は、農科と文科でどれくらいの秒数差があったか？   \n",
+       "1      2            骸骨男の正体は誰ですか？作中で言及されている氏名で答えること。   \n",
+       "2      3           骸骨男はバスの中に足跡を一切残さずにどうやって抜け出しましたか？   \n",
+       "3      4            殺人罪で裁判にかけられた兄が登場しますが、その理由は何ですか？   \n",
+       "4      5                      小説「芽生」で出てくる国名は何種類ですか？   \n",
+       "\n",
+       "                                              answer  \\\n",
+       "0  文科が漕いだ時間は五分十五秒で、農科は五分二十秒以上かかったため、文科が農科に対して約五秒の...   \n",
+       "1                                     骸骨男の正体は笠原太郎です。   \n",
+       "2  骸骨男はバスの床に隠し戸がついており、その隠し戸を使って逃げたため、足跡を一切残さずに抜け出...   \n",
+       "3  兄が殺人罪で裁判にかけられた理由は、恋人を殺した後に自らも自殺しようとしたためです。兄は、魚...   \n",
+       "4             「芽生」に出てくる国名については、情報が提供されていないため、わかりません。   \n",
+       "\n",
+       "                                       full_evidence  \n",
+       "0  二三日してから法科がまた口惜しがって挑戦《ちょうせん》をして来た。その時は四分の力漕をやって...  \n",
+       "1  そいつが、立ちあがって、こちらをむきました。その顔！　やっぱりそうでした。骸骨です。骸骨の顔...  \n",
+       "2  いつか、大型バスの中から骸骨男が消えたのも、バスの床に、かくし戸がついていたというのはごまか...  \n",
+       "3  嘉作の一四歳の息子が、父を捜すために走ってきた。彼は唄と叫び声を聞いた。けれども、怖いと感じ...  \n",
+       "4  芽生\\n\\n島崎藤村\\n\\n--------------------------------...  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query_df.head()"
    ]
   },
   {
@@ -247,15 +352,289 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LLMを使ってanswerに基づき、evidenceから200文字程度を抜き出す関数\n",
+    "def extract_relevant_evidence(answer, full_evidence):\n",
+    "    extract_prompt = PromptTemplate(\n",
+    "        input_variables=[\"answer\", \"full_evidence\"],\n",
+    "        template=\n",
+    "            \"\"\"\n",
+    "                f\"以下は回答と関連する証拠文です。\"\n",
+    "                f\"回答に必要な部分を200文字以内で抜き出してください。\\n\"\n",
+    "                f\"回答: {answer}\\n\\n\"\n",
+    "                f\"証拠文: {full_evidence}\\n\"\n",
+    "            \"\"\"\n",
+    "    )\n",
+    "    chain = extract_prompt | llm\n",
+    "\n",
+    "    response = chain.invoke(\n",
+    "        {\"answer\": answer, \"full_evidence\": full_evidence}\n",
+    "    )\n",
+    "    return response.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ステップ2: full_evidenceを使って関連する部分を抜き出す\n",
+    "query_df['evidence'] = query_df.apply(\n",
+    "    lambda row: extract_relevant_evidence(row['answer'], row['full_evidence']),\n",
+    "    axis=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query_df['evidence'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "replace_dict = {\n",
+    "        \"\\n\": \"\",\n",
+    "        \"\\r\": \"\",\n",
+    "    }\n",
+    "query_df = query_df.replace(\n",
+    "        {\"answer\": replace_dict},\n",
+    "        regex=True\n",
+    "    )\n",
+    "query_df = query_df.replace(\n",
+    "        {\"evidence\": replace_dict},\n",
+    "        regex=True\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# LLMを使って要約を行う関数\n",
+    "def summarize_answer(answer: str) -> str:\n",
+    "    # OpenAI API などの LLM を使用して要約を実行\n",
+    "    \n",
+    "    summarize_prompt = PromptTemplate(\n",
+    "        input_variables=[\"answer\"],\n",
+    "        template=\n",
+    "            \"\"\"\n",
+    "                以下の文章を50文字程度で要約してください。\\n\n",
+    "                f\"回答: {answer}\"\n",
+    "            \"\"\"\n",
+    "    )\n",
+    "    chain = summarize_prompt | llm\n",
+    "\n",
+    "    response = chain.invoke(\n",
+    "        {\"answer\": answer}\n",
+    "    )\n",
+    "    return response.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tiktokenとgpt-4のトークナイザーを取得\n",
+    "enc = tiktoken.encoding_for_model(\"gpt-4-2024-08-06\")\n",
+    "\n",
+    "# query_df の \"answer\" 列のトークン数を計算し、50トークンを超える場合は要約を行う関数\n",
+    "def check_and_summarize_answers(query_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    def summarize_if_needed(answer: str) -> str:\n",
+    "        # トークン数を計算\n",
+    "        token_count = len(enc.encode(answer))\n",
+    "        \n",
+    "        # トークン数が50を超えた場合は要約する\n",
+    "        if token_count > 50:\n",
+    "            # LLMを使って要約\n",
+    "            summarized_answer = summarize_answer(answer)\n",
+    "            return summarized_answer\n",
+    "        return answer\n",
+    "\n",
+    "    # \"answer\" 列に対して処理を適用\n",
+    "    query_df[\"answer\"] = query_df[\"answer\"].apply(summarize_if_needed)\n",
+    "    return query_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_df = check_and_summarize_answers(query_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>problem</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>full_evidence</th>\n",
+       "      <th>evidence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>競漕会の三日前のレースコースでの結果は、農科と文科でどれくらいの秒数差があったか？</td>\n",
+       "      <td>文科は五分十五秒で漕ぎ、農科に約五秒差で勝利した。</td>\n",
+       "      <td>二三日してから法科がまた口惜しがって挑戦《ちょうせん》をして来た。その時は四分の力漕をやって...</td>\n",
+       "      <td>回答: 文科が漕いだ時間は五分十五秒で、農科は五分二十秒以上かかったため、文科が農科に対して...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>骸骨男の正体は誰ですか？作中で言及されている氏名で答えること。</td>\n",
+       "      <td>骸骨男の正体は笠原太郎です。</td>\n",
+       "      <td>そいつが、立ちあがって、こちらをむきました。その顔！　やっぱりそうでした。骸骨です。骸骨の顔...</td>\n",
+       "      <td>回答: 骸骨男の正体は笠原太郎です。証拠文: 「そいつが、立ちあがって、こちらをむきました。...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>骸骨男はバスの中に足跡を一切残さずにどうやって抜け出しましたか？</td>\n",
+       "      <td>骸骨男はバスの隠し戸から逃げ、足跡を残さずに脱出しました。</td>\n",
+       "      <td>いつか、大型バスの中から骸骨男が消えたのも、バスの床に、かくし戸がついていたというのはごまか...</td>\n",
+       "      <td>回答: 骸骨男はバスの床に隠し戸がついており、その隠し戸を使って逃げたため、足跡を一切残さず...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>殺人罪で裁判にかけられた兄が登場しますが、その理由は何ですか？</td>\n",
+       "      <td>兄は恋人を殺した後、自殺を試みたため殺人罪で裁判にかけられた。</td>\n",
+       "      <td>嘉作の一四歳の息子が、父を捜すために走ってきた。彼は唄と叫び声を聞いた。けれども、怖いと感じ...</td>\n",
+       "      <td>回答: 兄が殺人罪で裁判にかけられた理由は、恋人を殺した後に自らも自殺しようとしたためです。...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>小説「芽生」で出てくる国名は何種類ですか？</td>\n",
+       "      <td>「芽生」に出てくる国名については、情報が提供されていないため、わかりません。</td>\n",
+       "      <td>芽生\\n\\n島崎藤村\\n\\n--------------------------------...</td>\n",
+       "      <td>回答: 「芽生」に出てくる国名については、情報が提供されていないため、わかりません。証拠文:...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index                                    problem  \\\n",
+       "0      1  競漕会の三日前のレースコースでの結果は、農科と文科でどれくらいの秒数差があったか？   \n",
+       "1      2            骸骨男の正体は誰ですか？作中で言及されている氏名で答えること。   \n",
+       "2      3           骸骨男はバスの中に足跡を一切残さずにどうやって抜け出しましたか？   \n",
+       "3      4            殺人罪で裁判にかけられた兄が登場しますが、その理由は何ですか？   \n",
+       "4      5                      小説「芽生」で出てくる国名は何種類ですか？   \n",
+       "\n",
+       "                                   answer  \\\n",
+       "0               文科は五分十五秒で漕ぎ、農科に約五秒差で勝利した。   \n",
+       "1                          骸骨男の正体は笠原太郎です。   \n",
+       "2           骸骨男はバスの隠し戸から逃げ、足跡を残さずに脱出しました。   \n",
+       "3         兄は恋人を殺した後、自殺を試みたため殺人罪で裁判にかけられた。   \n",
+       "4  「芽生」に出てくる国名については、情報が提供されていないため、わかりません。   \n",
+       "\n",
+       "                                       full_evidence  \\\n",
+       "0  二三日してから法科がまた口惜しがって挑戦《ちょうせん》をして来た。その時は四分の力漕をやって...   \n",
+       "1  そいつが、立ちあがって、こちらをむきました。その顔！　やっぱりそうでした。骸骨です。骸骨の顔...   \n",
+       "2  いつか、大型バスの中から骸骨男が消えたのも、バスの床に、かくし戸がついていたというのはごまか...   \n",
+       "3  嘉作の一四歳の息子が、父を捜すために走ってきた。彼は唄と叫び声を聞いた。けれども、怖いと感じ...   \n",
+       "4  芽生\\n\\n島崎藤村\\n\\n--------------------------------...   \n",
+       "\n",
+       "                                            evidence  \n",
+       "0  回答: 文科が漕いだ時間は五分十五秒で、農科は五分二十秒以上かかったため、文科が農科に対して...  \n",
+       "1  回答: 骸骨男の正体は笠原太郎です。証拠文: 「そいつが、立ちあがって、こちらをむきました。...  \n",
+       "2  回答: 骸骨男はバスの床に隠し戸がついており、その隠し戸を使って逃げたため、足跡を一切残さず...  \n",
+       "3  回答: 兄が殺人罪で裁判にかけられた理由は、恋人を殺した後に自らも自殺しようとしたためです。...  \n",
+       "4  回答: 「芽生」に出てくる国名については、情報が提供されていないため、わかりません。証拠文:...  "
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 必要な列（id, answer, evidence）をヘッダなしでCSVに書き出し\n",
     "query_df[['index', 'answer', 'evidence']].to_csv(\n",
-    "    \"../data/evaluation/submit_20240912/predictions.csv\",\n",
+    "    \"../data/evaluation/submit/predictions.csv\",\n",
     "    index=False,\n",
-    "    header=False\n",
+    "    header=False,\n",
+    "    encoding=\"utf-8-sig\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# バックアップ用に別のファイルにも保存\n",
+    "query_df[['index', 'answer', 'evidence']].to_csv(\n",
+    "    \"../data/evaluation/submit_example/predictions_20240912.csv\",\n",
+    "    index=False,\n",
+    "    header=False,\n",
+    "    encoding=\"utf-8-sig\"\n",
     ")"
    ]
   }
